@@ -1,3 +1,9 @@
+Wed Jul 30 23:04:12 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/main.cpp:
+	  - Added auto-login.
+	  - The correct path to the protocol plugins should now be set.
+
 Wed Jul 30 22:47:06 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimBListWindow.cpp:
